@@ -1,3 +1,12 @@
+2002-05-24  John Harper  <jsh@unfactored.org>
+
+	* sawfish/wm/state/wm-spec.jl (client-message-handler): don't
+	select the new desktop when moving window after _NET_WM_DESKTOP
+
+	* sawfish/wm/workspace.jl
+	(send-window-to-workspace-from-first): added optional SELECT
+	param
+
 2002-05-13  John Harper  <jsh@unfactored.org>
 
 	* sawfish/wm/gnome/integration.jl: admit defeat and go back to
